<!--
  ~ Made by Bartosz Lewandowski
  ~ Copyright (c) Lodz, Poland 2019.
  -->

<resources>
    //activity_sign_up
    <string name="app_name">InstaClone</string>
    <string name="social">Social Media</string>

    <string name="hint_kickBoxer_name">Please enter the name of the kickboxer</string>
    <string name="hint_kickBoxer_punchSpeed">Please enter the punch speed</string>
    <string name="hint_kickBoxer_punchPower">Please enter the punch power</string>
    <string name="hint_kickBoxer_kickSpeed">Please enter the kick speed</string>
    <string name="btn_save">Save kickboxer to server</string>
    <string name="hint_kickBoxer_kickPower">Please enter the kick power</string>
    <string name="get_data">Get data</string>
    <string name="button_get_all_data">Get All Data</string>
    <string name="switch_activity">Switch to another activity</string>

    //activity_signup
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="hint_email">Please enter an email</string>
    <string name="hint_username">Please enter an username</string>
    <string name="hint_password">Please enter a password</string>
    <string name="log_out">Logout</string>

    // activity_login
    <string name="hint_username_or_email">Username or email</string>

    // fragment_profile_tab
    <string name="hint_profile_name">Please enter a profile name</string>
    <string name="hint_bio">Please enter your bio</string>
    <string name="hint_profession">Please enter your profession</string>
    <string name="hint_hobbies">Please enter your hobbies</string>
    <string name="hint_fav_sport">Please enter your favourite sport</string>
    <string name="btn_update_info">Update Info</string>

    // fragment_users_tab
    <string name="loading_text">Loading Users… Please wait</string>

    // fragment_share_picture_tab
    <string name="hint_picture_description">Please enter a description for your image</string>
    <string name="btn_share_image">Share image</string>

    //my_menu
    <string name="menu_post_image_title">Post Image</string>
    <string name="menu_logout_title">Logout</string>

</resources>
